--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mirzaibtisam41/react-auto-skeleton-loader.git"
+  },
+  "homepage": "https://github.com/mirzaibtisam41/react-auto-skeleton-loader#readme"
 }
